<resources>
    <string name="app_name">RankQuest</string>
    <string-array name="clglist">
        <item>clg1</item>
        <item>clg2</item>
        <item>clg3</item>
    </string-array>
    <string-array name="allcolleges">
        <item>all clg1</item>
        <item>all clg2</item>
        <item>all clg3</item>
    </string-array>
    <string-array name="cast">
        <item>OC</item>
        <item>BC-A</item>
        <item>BC-B</item>
        <item>BC-C</item>
        <item>BC-D</item>
        <item>BC-E</item>
        <item>SC</item>
        <item>ST</item>
    </string-array>
    <string-array name="counselling">
        <item>Counselling-1</item>
        <item>Counselling-2</item>
        <item>Counselling-3</item>
    </string-array>
    <string-array name="branches">

        <item>AGR</item>>
        <item>ASE</item>
        <item>AUT</item>
        <item>BIO</item>
        <item>CEE</item>
        <item>CER</item>
        <item>CHE</item>
        <item>CIT</item>
        <item>CIV</item>
        <item>CPE</item>
        <item>CSE</item>
        <item>CSS</item>
        <item>DRG</item>
        <item>ECE</item>
        <item>ECM</item>
        <item>EEE</item>
        <item>EIE</item>
        <item>FDS</item>
        <item>GIN</item>
        <item>INF</item>
        <item>IST</item>
        <item>MEC</item>
        <item>MET</item>
        <item>MIN</item>
        <item>MMT</item>
        <item>NAM</item>
        <item>PET</item>
        <item>PHM</item>
        <item>PWR</item>
    </string-array>
    <string-array name="preference">
        <item>Rank</item>
        <item>Branch</item>
        <item>College</item>
    </string-array>
    <string name="phno">enter valid mobile number</string>
    <string name="bug">Bug Report</string>
    <string name="bugname">write bug here </string>
    <string name="improvement">Want Any Improvements</string>
    <string name="imp">write improvements here</string>
    <string name="rating">RateMyApp</string>
    <string name="submit">Submit</string>
    <string-array name="weblinks">
        <item>Eamcet</item>
        <item>APSCHE</item>
        <item>RedAnts</item>
        <item>Sasi </item>
    </string-array>
    <string-array name="links">
        <item>https://apeamcet.nic.in</item>
        <item>http://www.apsche.org/apsche_new/</item>
        <item>http://www.redants.info</item>
        <item>http://www.sasi.ac.in</item>

    </string-array>
    <string name="develop">Developed by:</string>
    <string name="mentor">Mentor by:</string>
    <string name="guided">Guided by:</string>
    <string name="promote">Promoted by:</string>
    <string name="dname">Mr. P.Uday Sai Kumar\n\nMr. K.Karthik Bharadhwaj\n\nMr. N.Vamsi Krishna\n\nComputer Science and Engineering\nSasi Institute of Technology and Enginering \nTadepalligudem, West Godavari Dt, \nAndhra Pradesh</string>
    <string name="dname2">Mr K.Karthik Bharadhwaj,Computer
Science and Engineering Dept,\nemail: karthik.bharadhwaj1998@gmail.com \n\nMr Vamsi Krishna,Computer Science And Engineering Dept,\nemail:vamsi8979@gmail.com
    </string>
    <string name="mname">Prof P.Kiran Kumar, Computer Science and Engineering\n\nMr. M.Narendra Krishna, Vice-Chairman, SASI Educational Society</string>
    <string name="gname">Mr. M.Narendra Krishna, Vice-Chairman, SASI Educational Society</string>
    <string name="pname">Sasi Institute of Technology and
Engineering, West Godavari Dt, AP, INDIA</string>
    <string name="cl">All original certificates and 2 sets of Xerox copies like:</string>
    <string name="cl1p1">1. AP EAMCET-2017 Rank Card</string>
    <string name="cl1p2">2.AP EAMCET Hall Ticket</string>
    <string name="cl1p3">3.Intermediate Memo of Marks-cum-Pass Certificate</string>
    <string name="cl1p4">4.S.S.C or its equivalent Marks memo</string>
    <string name="cl1p5">5.VI to Inter Study Certificate</string>
    <string name="cl1p6">6.Residence Certificate (in case where the candidate has no institutionalized education)</string>
    <string name="cl1p7">7.Residence Certificate of either of the parents in A.P. for 10 years in case of non-local candidates</string>
    <string name="cl1p8">8.Income Certificate issued after 01.01.2017</string>
    <string name="cl1p9">9.Aadhar Card</string>
    <string name="cl1p10">10.Caste Certificate issued by the competent authority</string>
    <string name="cl1p11">11.PH/CAP/NCC/Sports/Minority Certificate if applicable</string>
    <string name="cl2">Certificates to be produced by PH/CAP/NCC/Sports/Minority Candidates:
    </string>
    <string name="cl2p1">1.PH-Certificate issued by District Medical Board. Candidates with 40% and above disability are only eligible</string>
    <string name="cl2p2">2.CAP- Certificate issued by ZillaSainik Welfare Board (In case of Ex-Service men)</string>
    <string name="cl2p3">3.Identity card and Discharge book for verification</string>
    <string name="cl2p4">4.Candidates whose parents are domicile of Andhra Pradesh are only eligible to be considered under “CAP” Category</string>
    <string name="cl4">NCC and Sports:
    </string>
    <string name="cl5">To produce Original Certificates issued by the competent authorities.
    </string>
    <string name="cl6">Minorities:
    </string>
    <string name="cl7">SSC TC containing Minority status or Certificate from the Head Master.
    </string>
    <string name="cl8">Anglo-Indian:
    </string>
    <string name="cl9">A Certificate issued by Tahsildar of their place of Residence.
    </string>
    <string-array name="branch">
        <item>ECE-Electronics And Communication Engineering</item>
        <item>CSE-Computer Science And Engineering</item>
        <item>MEC-Mechanical Engineering</item>
        <item>EEE-Electrical And Electronics Engineering</item>
        <item>CIV-Civil Engineering</item>
        <item>INF-Information Technology</item>
        <item>AGR-Agricultural Engineering</item>
        <item>CHE-Chemical Engineering</item>
        <item>PHM-B.Pharamacy</item>
        <item>EIE-Electronics And Instrumentation Engineering</item>
        <item>PET-Petroleum Engineering</item>
        <item>CSS-Computer Science And System Engineering</item>
        <item>CIT-Computer Information Technology And Engineering</item>
        <item>AUT-Automobile Engineering</item>
        <item>CPE-Chemical Petro Engineering</item>
        <item>MET-Metallurgical Engineering</item>
        <item>MIN-Mining Engineering</item>
        <item>DRG-Dairying Engineering</item>
        <item>ASE-Aerospace Engineering</item>
        <item>ECM-Electronics And Computer Engineering</item>
        <item>GIN-Geo Informatics Engineering</item>
        <item>IST-Instrumentation Engineering Technology</item>
        <item>NAM-Naval Architecture And Marine Engineering</item>
        <item>MMT-Metallurgy And Material Technology And Engineering</item>
        <item>PWR-Power Engineering</item>
        <item>FDS-Food Science Engineering</item>
        <item>BIO-Bio Technology And Engineering</item>
        <item>CEE-Civil Environmental Engineering</item>
        <item>CER-Ceramic Engineering</item>
    </string-array>
    <string-array name="seatsfilled">
        <item>18850</item>
        <item>17514</item>
        <item>10009</item>
        <item>7511</item>
        <item>7453</item>
        <item>2426</item>
        <item>538</item>
        <item>329</item>
        <item>298</item>
        <item>253</item>
        <item>124</item>
        <item>87</item>
        <item>84</item>
        <item>73</item>
        <item>60</item>
        <item>60</item>
        <item>46</item>
        <item>40</item>
        <item>37</item>
        <item>36</item>
        <item>30</item>
        <item>30</item>
        <item>30</item>
        <item>27</item>
        <item>23</item>
        <item>19</item>
        <item>10</item>
        <item>10</item>
        <item>10</item>
    </string-array>
    <string-array name="seatsavailable">
        <item>24246</item>
        <item>22031</item>
        <item>17285</item>
        <item>13364</item>
        <item>13065</item>
        <item>2687</item>
        <item>649</item>
        <item>349</item>
        <item>3528</item>
        <item>324</item>
        <item>281</item>
        <item>126</item>
        <item>84</item>
        <item>189</item>
        <item>60</item>
        <item>60</item>
        <item>126</item>
        <item>48</item>
        <item>42</item>
        <item>42</item>
        <item>30</item>
        <item>30</item>
        <item>30</item>
        <item>30</item>
        <item>42</item>
        <item>20</item>
        <item>10</item>
        <item>10</item>
        <item>10</item>
    </string-array>
    <string-array name="percentage">
        <item>77.74</item>
        <item>79.49</item>
        <item>57.9</item>
        <item>56.2</item>
        <item>57.04</item>
        <item>90.28</item>
        <item>82.89</item>
        <item>94.26</item>
        <item>8.44</item>
        <item>78.08</item>
        <item>44.12</item>
        <item>69.04</item>
        <item>100</item>
        <item>38.62</item>
        <item>100</item>
        <item>100</item>
        <item>36.5</item>
        <item>83.33</item>
        <item>88.09</item>
        <item>85.71</item>
        <item>100</item>
        <item>100</item>
        <item>100</item>
        <item>90</item>
        <item>54.76</item>
        <item>95</item>
        <item>100</item>
        <item>100</item>
        <item>100</item>
    </string-array>
    <string name="sf">SF:SeatsFilled</string>
    <string name="sa">SA:SeatsAvailable</string>
    <string name="percent">PER:Percentage Filled</string>
    <string name="counceling1">AP EAMCET OC/ BC/ SC/ ST/ Minority Counselling Centers</string>
</resources>